--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  stripe_payment: ^1.0.7
+  http: ^0.11.3+17
 
 
 # For information on the generic Dart part of this file, see the
